Fixed spacing issue on footer icons

--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -55,7 +55,6 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      margin-left: 0.5rem;
     }
 
     .details {
