--- a/styles/UI/buttons.module.scss
+++ b/styles/UI/buttons.module.scss
@@ -68,6 +68,7 @@
   justify-content: center;
   font-size: 1.5rem;
   cursor: pointer;
+  margin: 0 0.5rem 0 0.5rem;
 
   &:hover {
     color: $blue;
@@ -99,8 +100,8 @@
 
 .icon_button {
   padding: 0.75rem;
-  width: 4.5rem;
-  height: 4.5rem;
+  width: 4rem;
+  height: 4rem;
   margin: 0 0.5rem 0 0.5rem;
   border: none;
   background: none;
